--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "request": "^2.83.0",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
