--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "express": "^4.13.3",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
-    "mongoose": "^4.1.2",
+    "mongoose": "^4.13.11",
     "morgan": "^1.6.1",
+    "path": "^0.12.7",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5",
     "tslib": "^1.9.0"
@@ -28,13 +29,13 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "debug": "^2.2.0",
-    "grunt": "^1.0.1",
-    "grunt-develop": "^0.4.0",
+    "grunt": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
-    "time-grunt": "^1.2.1",
+    "grunt-develop": "^0.4.0",
     "load-grunt-tasks": "^3.2.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "time-grunt": "^1.2.1"
   }
 }
