--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^2.3.0",
     "mongoose": "^4.13.11",
     "morgan": "^1.6.1",
+    "parse-server": "^2.7.2",
     "path": "^0.12.7",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5",
